plugins {
    id 'java'
    id 'application'
    id 'eclipse'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.fixfinder'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Core, Web, JPA y WebSockets
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Driver de MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'
    
    // JavaFX (Dependencias explícitas para Windows)
    implementation 'org.openjfx:javafx-controls:21:win'
    implementation 'org.openjfx:javafx-fxml:21:win'
    implementation 'org.openjfx:javafx-graphics:21:win'
    implementation 'org.openjfx:javafx-base:21:win'
    
    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'com.h2database:h2'
    
    // Firebase Admin SDK
    implementation 'com.google.firebase:firebase-admin:9.2.0'
}

application {
    mainClass = 'com.fixfinder.Main'
}

test {
    useJUnitPlatform()
}

task runServer(type: JavaExec) {
    group = 'application'
    description = 'Arranca el Servidor Spring Boot'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.fixfinder.red.ServidorCentral'
}

task runSeeder(type: JavaExec) {
    group = 'application'
    description = 'Poblar la base de datos con datos de prueba'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.fixfinder.utilidades.DataSeeder'
}

task runDashboard(type: JavaExec) {
    group = 'application'
    description = 'Arranca el Panel de Gestión Principal (JavaFX)'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'com.fixfinder.ui.dashboard.AppDashboardPrincipal'
    
    doFirst {
        def javafxJars = configurations.runtimeClasspath.filter { it.name.contains('javafx') }
        jvmArgs = [
            '--module-path', javafxJars.asPath,
            '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics'
        ]
    }
}

bootJar {
    mainClass = 'com.fixfinder.red.ServidorCentral'
    archiveFileName = 'fixfinder-server.jar'
}

